--- a/e-commerce-app/package.json
+++ b/e-commerce-app/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://github.com/samuel-b/e-commerce-project/",
+    "homepage": "http://samuel-b.github.io/e-commerce-project/",
     "name": "e-commerce-app",
     "version": "0.1.0",
     "private": true,
